--- a/Tutorial/tutorial_webscrapping.ipynb.ipynb
+++ b/Tutorial/tutorial_webscrapping.ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -21,25 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting MechanicalSoup\n",
-      "  Downloading MechanicalSoup-1.2.0-py3-none-any.whl (19 kB)\n",
+      "Requirement already satisfied: MechanicalSoup in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (1.2.0)\n",
       "Requirement already satisfied: beautifulsoup4>=4.7 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from MechanicalSoup) (4.11.1)\n",
-      "Requirement already satisfied: lxml in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from MechanicalSoup) (4.9.1)\n",
       "Requirement already satisfied: requests>=2.22.0 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from MechanicalSoup) (2.28.1)\n",
+      "Requirement already satisfied: lxml in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from MechanicalSoup) (4.9.1)\n",
       "Requirement already satisfied: soupsieve>1.2 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from beautifulsoup4>=4.7->MechanicalSoup) (2.3.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from requests>=2.22.0->MechanicalSoup) (1.26.11)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from requests>=2.22.0->MechanicalSoup) (3.3)\n",
       "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from requests>=2.22.0->MechanicalSoup) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from requests>=2.22.0->MechanicalSoup) (1.26.11)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lmmantilla\\anaconda3\\lib\\site-packages (from requests>=2.22.0->MechanicalSoup) (2022.9.14)\n",
-      "Installing collected packages: MechanicalSoup\n",
-      "Successfully installed MechanicalSoup-1.2.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -50,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<http.client.HTTPResponse object at 0x000002BAA2ADC4F0>\n",
+      "<http.client.HTTPResponse object at 0x000002BAA46ECF70>\n",
       "<html>\n",
       "<head>\n",
       "<title>Profile: Aphrodite</title>\n",
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -214,16 +211,6 @@
       "['bso', 'o']\n",
       "['abso']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['ABC']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -269,8 +256,7 @@
       "['abc']\n",
       "[]\n",
       "[]\n",
-      "['adc']\n",
-      "['abc']\n"
+      "['adc']\n"
      ]
     }
    ],
@@ -284,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -453,16 +439,6 @@
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Profile: Dionysus'"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -479,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +493,7 @@
        "[<img src=\"/static/dionysus.jpg\"/>]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,12 +511,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/profiles/aphrodite\n",
+      "Aphrodite\n",
+      "/profiles/poseidon\n",
+      "Poseidon\n",
+      "/profiles/dionysus\n",
+      "Dionysus\n"
+     ]
+    }
+   ],
    "source": [
     "# Otro ejercicio en clase\n",
-    "#Write a program that grabs the full HTML from the page at the URL http://olympus.realpython.org/profiles."
+    "#Write a program that grabs the links HTML from the page at the URL http://olympus.realpython.org/profiles.\n",
+    "\n",
+    "url = \"http://olympus.realpython.org/profiles\"\n",
+    "response = urlopen(url)\n",
+    "html = response.read()\n",
+    "\n",
+    "soup = BeautifulSoup(html, \"html.parser\")\n",
+    "images = soup.find_all(\"a\")\n",
+    "\n",
+    "for image in images:\n",
+    "    print(image[\"href\"])\n",
+    "    print(image.string)\n"
    ]
   },
   {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
